<resources>
    <string name="app_name">StabilityGuard</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="alarms">Alarms</string>
    <string name="id_1_s">Alarm Id: %1$s</string>
    <string name="name_1_s">Name: %1$s</string>
    <string name="timestamp_1_s">Timestamp: %1$s</string>
    <string name="status_1_s">Status: %1$s</string>
    <string name="ack">ACK</string>
    <string name="clear">Clear</string>
    <string name="surveillance">Surveillance</string>
    <string name="dashboard">Dashboard</string>
    <string name="device_id_1_s">Device Id: %1$s</string>
</resources>